fix due date update form width on mobile

--- a/prefixed-main.css
+++ b/prefixed-main.css
@@ -667,5 +667,6 @@ body {
 
     .due-date-update-form {
         padding: 0.5rem;
+        width: 100%;
     }
 }
